# pre-mortem-ledger

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
config/: positions.yaml
data/ledger/: 2026-M06.md  README.md  runs.jsonl
decisions/: DEC-0001-v0.1-cut.md
docs/: METHODOLOGY.md  first-pr.md  product-brief.md  system-map.md
examples/: premortem-EXAMPLE-2026-M07.md
pre_mortem_ledger/: __init__.py  __main__.py  cli.py  ledger.py  monthly.py  report.py  rubric.py  schema.py  score.py  show.py
rubric/: failure_modes.yaml
schemas/: premortem.schema.json
scripts/: spec_check.py  validate_premortem_schema.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
tests/: conftest.py  test_cli.py  test_monthly.py  test_rubric.py  test_schema.py  test_score.py  test_status_append_only.py
